--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,10 +1,71 @@
 h1{
    font-size: 10;
-   color:bisque 
+   color: blue; 
+   text-align: center;
 }
-p{color: blueviolet;}
+p{color: rgb(226, 43, 43); text-align: center;}
 .para{
    color: aqua;
 }
+.button{
+   color: rgb(236, 241, 246);
+   background-color: rgb(78, 116, 214);
+   text-align: center;
+   border-radius: 5px;
+   border-width: 0ch;
+   }   
+#add_task{
+   height: 30px;
+   width: 80px;
+}
+.button1{
+   text-align: center;
+}
 
 
+#searchTerm{
+   width: 175x;
+  border: 3px solid #00B4CC;
+   padding: 5px;
+  height: 20px;
+  border-radius: 5px 5px 5px 5px;
+  outline: none;
+  color: #9DBFAF;
+  }
+
+ .searchbutton{
+   width: 30px;
+   height: 35px;
+   border: 1px solid #00B4CC;
+   background: #00B4CC;
+   color: #fff;
+   cursor: pointer;
+   font-size: 20px;
+   Display : flex;
+   align-items: center;
+   justify-content: space-between;
+   margin-left: 545px;
+ 
+ }
+
+ /* .wrap{
+   width: 10%;
+   position: relative;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+
+ } */
+ .inputAuth{
+   margin-left: 550px;
+ 
+ }
+
+ .input{
+   width: 175px;
+   border: 3px solid #00B4CC;
+   height: 30px;
+ }
+
+ .section { height: 100vh;}
+ .section—first { height: 90vh; }
